[package]
name = "aether"
version = "0.1.0"
edition = "2021"
authors = ["Aether Contributors"]
description = "Aether (以太) - The First AI-Native Programming Language"
license = "MIT OR Apache-2.0"
repository = "https://github.com/driftcell/Aether"
keywords = ["ai", "programming-language", "compiler", "utf8", "glyphcode"]
categories = ["compilers", "parser-implementations"]

[dependencies]
# Core dependencies for the language implementation
unicode-segmentation = "1.12"
thiserror = "2.0"
regex = "1.11"
rand = "0.8"
chrono = "0.4"

# Cryptography dependencies (v1.2)
sha2 = "0.10"
aes-gcm = "0.10"
ed25519-dalek = "2.1"
base64 = "0.22"

# HTTP client dependencies
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
# Testing utilities

[lib]
name = "aether"
path = "src/lib.rs"

[[bin]]
name = "aether"
path = "src/main.rs"
